# id3-padding-remover

./: .gitignore  Cargo.toml  DlgMain.go  DlgMainEvLstFiles.go  DlgMainEvents.go  DlgMainEventsLstFiles.go  DlgMainEventsMenu.go  DlgMainEventsWm.go  DlgMainFuncs.go  DlgMainLstFiles.go  DlgMainLstFilesMenu.go  DlgMainLstMp3s.go  DlgMainMemory.go  DlgMainMenu.go  DlgMainMenuFiles.go  DlgMainMenuFrames.go  DlgMainModalTagOp.go  DlgMainTag.go  DlgMainWm.go  DlgMainWmFiles.go  ID3 Fit with Wingows.code-workspace  ID3 with Rust.code-workspace  Id3PaddingRemover.sln  Id3PaddingRemover.vcproj  LICENSE.md  README  README.md  build.rs  cmds.go  go.mod  id3-fit-genres.txt  id3-fit.sln  id3-fit.syso  id3-fit.vcxproj  id3-fit.vcxproj.filters  id3-padding-remover.sln  id3-padding-remover.vcxproj  id3-padding-remover.vcxproj.filters  id3fit-genres.txt  id3fit.syso  (+4 more)
common/: FileMap.c  FileMap.h  Font.c  Font.h  Glob.h  Id3.c  Id3.h  ListView.c  ListView.h  Strings.c  Thread.c  Thread.h
dlgfields/: DlgFields.go  DlgFieldsFuncs.go  DlgFieldsWm.go  ids.go
dlgmain/: DlgMain.go  DlgMainFuncs.go  DlgMainLvmFiles.go  DlgMainMenuFiles.go  DlgMainMenuFrames.go  DlgMainModalTagOp.go  DlgMainWm.go  ids.go
dlgrun/: DlgRun.go  DlgRunWm.go  ids.go
id3/: Frame.go  FrameBase.go  FrameBinary.go  FrameComment.go  FrameMultiText.go  FrameParser.go  FrameSerializer.go  FrameText.go  FrameTypes.go  ParseFrame.go  Parser.go  Tag.go  TagData.go  TagPriv.go  Util.go  parser.go  util.go  utils.go
id3v2/: Frame.go  FrameBinary.go  FrameComment.go  FrameData.go  FrameMultiText.go  FrameText.go  Tag.go  (+3 more)
(+98 files in other folders)
