[package]
name = "id3-fit"
version = "2.2.0"
authors = ["Rodrigo Cesar de Freitas Dias <rcesar@gmail.com>"]
edition = "2021"

[profile.release]
lto = true
codegen-units = 1
#panic = "abort"

[dependencies]
winsafe = { path = "../winsafe", features = ["idl", "shell"] }

# https://doc.rust-lang.org/reference/linkage.html#static-and-dynamic-c-runtimes
# RUSTFLAGS='-C target-feature=+crt-static' cargo build --release --target x86_64-pc-windows-msvc
